Rickroll generator hjhj

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -11,6 +11,7 @@
         <div class="card p-3">
             Bum bum chiu chiu
             <a href="/segment">Segment chee online</a>
+            <a href="/rickroll">Rickroll generator link</a>
         </div>
     </div>
 
