--- a/website/templates/segment/index.html
+++ b/website/templates/segment/index.html
@@ -8,7 +8,7 @@
 <div class="card p-3" style="position:sticky; top:84px;">
     <h2>Segment chee dùng chung. Một đoạn segment tree [1, 1e9]. Bạn được sử đụng 2 truy vấn sau</h3>
     <ul>
-        <li>Update(start, end, value): Cập nhật đoạn [start, end] thành value</li>
+        <li>Update(start, end, value): Cộng đoạn [start, end] vào value</li>
         <li>Get(position): Lấy giá trị tại vị trí position</li>
     </ul>
 
